# SGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SGL.sln
Engine/: CMakeLists.txt  Engine.h  Macros.h  main.cpp
Engine/Camera/: Camera.cpp  Camera.h  FPCamera.cpp
Engine/ECS/Component/: Component.h
Engine/ECS/Entity/: Entity.h
Engine/Imgui/: ImguiImplSGL.cpp
Engine/Mesh/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
Engine/System/: Application.cpp  Application.h  InputSystem.h
Engine/Texture/: Texture.h
Engine/Utils/: Timer.h
Engine/camera/: Camera.cpp  Camera.h  FPSCamera.cpp  FPSCamera.h
Engine/ecs/component/: Component.h
Engine/ecs/entity/: Entity.h
Engine/material/: Material.cpp  Material.h
Engine/mesh/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
Engine/scene/: Scene.h
Engine/shader/: BlinnPhongShader.cpp  BlinnPhongShader.h
Engine/system/: Application.cpp  Application.h  InputSystem.cpp  InputSystem.h  Window.cpp  Window.h
Engine/texture/: Texture.cpp  Texture.h
Engine/utilities/: Timer.cpp
Example/: Application.cpp  Application.h  BlinnPhong.h  BlinnPhongShader.cpp  BlinnPhongShader.h  CMakeLists.txt  Camera.cpp  Camera.h  ClearScreen.h  Common.h  CubeMap.h  DrawCube.h  DrawQuad.h  FPCamera.h  FPSCamera.cpp  FPSCamera.h  Macros.h  Mesh.h  Model.cpp  Model.h  Phong.h  RotateQuad.h  Texture.cpp  Texture.h  Triangle.h  TriangleWithTexture.h  Window.cpp  Window.h  main.cpp
Example-Triangle/: Example-Triangle.vcxproj  main.cpp
Example/BlinnPhong/: BlinnPhong.cpp  CMakeLists.txt
Example/ClearScreen/: CMakeLists.txt  ClearScreen.cpp
Example/CubeMap/: CMakeLists.txt  CubeMap.cpp
Example/DrawArrayQuad/: CMakeLists.txt  DrawArrayQuad.cpp
Example/DrawCube/: CMakeLists.txt  DrawCube.cpp
Example/DrawIndexQuad/: CMakeLists.txt  DrawIndexQuad.cpp
Example/DrawQuad/: CMakeLists.txt  DrawQuad.cpp
Example/FPCamera/: CMakeLists.txt  FPCamera.cpp
Example/Phong/: CMakeLists.txt  Phong.cpp
Example/RotateQuad/: CMakeLists.txt  RotateQuad.cpp
Example/Triangle/: CMakeLists.txt  Triangle.cpp
Example/TriangleWithTexture/: CMakeLists.txt  TriangleWithTexture.cpp
Example/camera/: FPSCamera.cpp
Example/ecs/component/: Component.h
Example/ecs/entity/: Entity.h
Example/mesh/: Mesh.cpp  Mesh.h
Example/shader/: BlinnPhongShader.cpp  BlinnPhongShader.h
Example/system/: Application.cpp  Window.h
Example/texture/: Texture.cpp
Framework/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Framework.h  IO.h  InputSystem.cpp  InputSystem.h  Mesh.h  Scene.h  Timer.cpp  Timer.h  Window.cpp  Window.h
Framework/Imgui/: ImguiImplSGL.cpp  ImguiImplSGL.h
Framework/camera/: Camera.h  FPCamera.cpp  FPCamera.h  FPSCamera.cpp  FPSCamera.h
Framework/material/: Material.h
Framework/mesh/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Vertex.h
Framework/shader/: BlinnPhongShader.cpp  BlinnPhongShader.h
Framework/system/: Application.cpp  Application.h  InputSystem.cpp  InputSystem.h  Window.cpp
Framework/utilities/: IO.cpp  IO.h
SGL/: Buffer.cpp  Buffer.h  CMakeLists.txt  Error.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Macros.h  Math.h  Matrix2.h  Matrix3.h  Matrix4.h  Rasterizer.cpp  Rasterizer.h  SGL.h  SGL.vcxproj  SGL.vcxproj.filters  SGLFrameBuffer.cpp  SGLFrameBuffer.h  SGLMatrix2.h  SGLMatrix4.h  SGLRasterizer.cpp  SGLRasterizer.h  SGLShader.h  SGLTexture.cpp  SGLVector2.h  SGLVector3.h  SGLVector4.h  SGLVertex.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vector2.h  Vector3.h  Vector4.h  Vertex.h
SGL/include/: SGLFrameBuffer.h  SGLMath.h  SGLMatrix3.h  SGLMatrix4.h  SGLTexture.h  SGLVector4.h
SGL/src/: SGLFrameBuffer.cpp  SGLRasterizer.cpp
TestFramework/: Application.cpp  Application.h  BlinnPhongShader.cpp  BlinnPhongShader.h  Mesh.cpp  Model.cpp  TestFramework.vcxproj  TestFramework.vcxproj.filters  Texture.h  Window.cpp
libSGL/: CMakeLists.txt  SGLFrameBuffer.cpp  SGLMatrix2.h  SGLRasterizer.cpp  SGLRasterizer.h  SGLShader.cpp  SGLShader.h  SGLTexture.h  libSGL.h
