set(LIB_NAME Engine)

FILE(GLOB FRAMEWORK_DIR "*.h" "*.cpp")
FILE(GLOB CAMERA_DIR "Camera/*.h" "Camera/*.cpp")
FILE(GLOB ECS_COMPONENT_DIR "ECS/Component/*.h" "ECS/Component/*.cpp")
FILE(GLOB ECS_ENTITY_DIR "ECS/Entity/*.h" "ECS/Entity/*.cpp")
FILE(GLOB ECS_DIR "ECS/System/*.h" "ECS/System.cpp")
FILE(GLOB MESH_DIR "Mesh/*.h" "Mesh/*.cpp")
FILE(GLOB RENDERER_DIR "Renderer/*.h" "Renderer/*.cpp")
FILE(GLOB SCENE_DIR "Scene/*.h" "Scene/*.cpp")
FILE(GLOB SHADER_DIR "Shader/*.h" "Shader/*.cpp")
FILE(GLOB SYSTEM_DIR "System/*.h" "System/*.cpp")
FILE(GLOB UTILS_DIR "Utils/*.h" "Utils/*.cpp")

source_group("" FILES ${FRAMEWORK_DIR})
source_group("Camera" FILES ${CAMERA_DIR})
source_group("ECS/Component" FILES ${ECS_COMPONENT_DIR})
source_group("ECS/Entity" FILES ${ECS_ENTITY_DIR})
source_group("ECS/System" FILES ${ECS_SYSTEM_DIR})
source_group("Mesh" FILES ${MESH_DIR})
source_group("Renderer" FILES ${RENDERER_DIR})
source_group("Scene" FILES ${SCENE_DIR})
source_group("Shader" FILES ${SHADER_DIR})
source_group("System" FILES ${SYSTEM_DIR})
source_group("Utilities" FILES ${UTILS_DIR})

find_package(SDL2 CONFIG REQUIRED)
find_package(Assimp CONFIG REQUIRED)
find_package(imgui CONFIG REQUIRED)
add_library(${LIB_NAME} STATIC ${FRAMEWORK_DIR} ${CAMERA_DIR} ${ECS_COMPONENT_DIR} ${ECS_ENTITY_DIR} ${ECS_SYSTEM_DIR} ${MESH_DIR} ${RENDERER_DIR} ${SCENE_DIR} ${SHADER_DIR} ${SYSTEM_DIR} ${UTILS_DIR})

target_link_libraries(${LIB_NAME} PRIVATE SGL SDL2::SDL2 assimp::assimp imgui::imgui)
target_include_directories(${LIB_NAME} PRIVATE ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/Engine )