set(EXE_NAME example)

FILE(GLOB EXAMPLE_DIR "*.h" "*.cpp")
FILE(GLOB CAMERA_DIR camera/*)
FILE(GLOB COMPONENT_DIR component/*)
FILE(GLOB MESH_DIR mesh/*)
FILE(GLOB RENDERER_DIR renderer/*)
FILE(GLOB SCENE_DIR scene/*)
FILE(GLOB SHADER_DIR shader/*)
FILE(GLOB SYSTEM_DIR system/*)
FILE(GLOB TEXTURE_DIR texture/*)
FILE(GLOB UTILITIES_DIR utilities/*)

source_group("" FILES ${EXAMPLE_DIR})
source_group("camera" FILES ${CAMERA_DIR})
source_group("component" FILES ${COMPONENT_DIR})
source_group("mesh" FILES ${MESH_DIR})
source_group("renderer" FILES ${RENDERER_DIR})
source_group("scene" FILES ${SCENE_DIR})
source_group("shader" FILES ${SHADER_DIR})
source_group("system" FILES ${SYSTEM_DIR})
source_group("texture" FILES ${TEXTURE_DIR})
source_group("utilities" FILES ${UTILITIES_DIR})

find_package(SDL2 CONFIG REQUIRED)
find_package(Assimp CONFIG REQUIRED)
add_executable(${EXE_NAME} ${EXAMPLE_DIR} ${CAMERA_DIR} ${COMPONENT_DIR} ${MESH_DIR} ${RENDERER_DIR} ${SCENE_DIR} ${SHADER_DIR} ${SYSTEM_DIR} ${TEXTURE_DIR} ${UTILITIES_DIR})

target_link_libraries(${EXE_NAME} PRIVATE SGL SDL2::SDL2 assimp::assimp)
target_include_directories(${EXE_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/SGL ${CMAKE_SOURCE_DIR}/example)